--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="google-site-verification" content="1YG1_ol-nV_JW4PIIyXcrgkJ_Fs-bLAMQfWYI5jU6nI" />
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width,initial-scale=1.0">
